# api/controllers/usage.js
@@ -6,26 +6,26 @@ module.exports.getUsage = (req, res) => {
 
     let id = req.swagger.params.id.value;
     let range = req.swagger.params.range.value;
-    let end = req.swagger.params.end.value;
+    let start = req.swagger.params.start.value;
 
-    if ( end ){
-        end = start.toUTCString().replace('GMT','');
-        end = new Date( end );
+    if ( start ){
+        start = start.toUTCString().replace('GMT','');
+        start = new Date( start );
     }
 
-    if ( !end )
-        end = new Date();
+    if ( !start )
+        start = new Date();
 
-    getUsageBy[range]( id, end, res );
+    getUsageBy[range]( id, start, res );
 
 };
 
 let getUsageBy = {};
 
-getUsageBy['hour'] = (id, end, res) => {
+getUsageBy['now'] = (id, start, res) => {
 
-    let ts1 = moment(end).format('YYYY-MM-DD');
-    let ts2 = moment(end).add(1, 'd').format('YYYY-MM-DD');
+    let ts1 = moment(start).format('YYYY-MM-DD');
+    let ts2 = moment(start).add(1, 'd').format('YYYY-MM-DD');
 
     let q = `
     select
@@ -38,66 +38,40 @@ getUsageBy['hour'] = (id, end, res) => {
 
     global.rainforest.getData(q)
         .then( (data) => {
-            let r = { start : ts1, end : ts2, samples : data };
-            res.json( { data: r, result : 'ok'  } );
+            res.json( { data: data, result : 'ok'  } );
         })
         .catch( (err) => {
             res.status(500).json( { code: err.code || 0, message: err.message } );
         });
 };
 
-getUsageBy['day'] = (id, end, res) => {
+getUsageBy['day'] = (id, start, res) => {
 
-    let ts1 = moment(end).subtract(1, 'd').format('YYYY-MM-DD');
-    let ts2 = moment(end).format('YYYY-MM-DD');
+    let ts1 = moment(start).format('YYYY-MM-DD');
+    let ts2 = moment(start).add(1, 'd').format('YYYY-MM-DD');
 
     let q = `
     select
-        from_unixtime(t2.demand_timestamp, "%Y-%m-%d") as date,
+        from_unixtime(t2.demand_timestamp, "%H") as hour,
         (max(t2.summation_delivered) - min(t2.summation_delivered)) - (max(t2.summation_received) - min(t2.summation_received)) as kwh
     from (
-        select * from sentinel.samples where mac_id = '${id}' and demand_timestamp > UNIX_TIMESTAMP (DATE('${ts2}')) AND demand_timestamp <= UNIX_TIMESTAMP (TIMESTAMP('${ts2} 23:59:59') )
+        select * from sentinel.samples where mac_id = '${id}' and demand_timestamp >= UNIX_TIMESTAMP (DATE('${ts1}')) AND demand_timestamp < UNIX_TIMESTAMP (DATE('${ts2}') )
     ) t2
-    group by date`;
+    group by hour`;
 
     global.rainforest.getData(q)
         .then( (data) => {
-            let r = { start : ts1, end : ts2, samples : data };
-            res.json( { data: r, result : 'ok'  } );
+            res.json( { data: data, result : 'ok'  } );
         })
         .catch( (err) => {
             res.status(500).json( { code: err.code || 0, message: err.message } );
         });
 };
 
-getUsageBy['week'] = (id, end, res) => {
+getUsageBy['week'] = (id, start, res) => {
 
-    let ts1 = moment(end).subtract(1, 'w').format('YYYY-MM-DD');
-    let ts2 = moment(end).format('YYYY-MM-DD');
-
-    let q = `
-    select
-        from_unixtime(t2.demand_timestamp, "%Y-%m-%d") as date,
-        (max(t2.summation_delivered) - min(t2.summation_delivered)) - (max(t2.summation_received) - min(t2.summation_received)) as kwh
-    from (
-        select * from sentinel.samples where mac_id = '${id}' and demand_timestamp > UNIX_TIMESTAMP (DATE('${ts1}')) AND demand_timestamp <= UNIX_TIMESTAMP (TIMESTAMP('${ts2} 23:59:59') )
-    ) t2
-    group by date`;
-
-    global.rainforest.getData(q)
-        .then( (data) => {
-            let r = { start : ts1, end : ts2, samples : data };
-            res.json( { data: r, result : 'ok'  } );
-        })
-        .catch( (err) => {
-            res.status(500).json( { code: err.code || 0, message: err.message } );
-        });
-};
-
-getUsageBy['month'] = (id, end, res) => {
-
-    let ts1 = moment(end).subtract(1, 'm').format('YYYY-MM-DD');
-    let ts2 = moment(end).format('YYYY-MM-DD');
+    let ts1 = moment(start).format('YYYY-MM-DD');
+    let ts2 = moment(start).add(1, 'w').format('YYYY-MM-DD');
 
     let q = `
     select
@@ -110,8 +84,30 @@ getUsageBy['month'] = (id, end, res) => {
 
     global.rainforest.getData(q)
         .then( (data) => {
-            let r = { start : ts1, end : ts2, samples : data };
-            res.json( { data: r, result : 'ok'  } );
+            res.json( { data: data, result : 'ok'  } );
+        })
+        .catch( (err) => {
+            res.status(500).json( { code: err.code || 0, message: err.message } );
+        });
+};
+
+getUsageBy['month'] = (id, start, res) => {
+
+    let ts1 = moment(start).format('YYYY-MM-DD');
+    let ts2 = moment(start).add(1, 'M').format('YYYY-MM-DD');
+
+    let q = `
+    select
+        from_unixtime(t2.demand_timestamp, "%Y-%m-%d") as date,
+        (max(t2.summation_delivered) - min(t2.summation_delivered)) - (max(t2.summation_received) - min(t2.summation_received)) as kwh
+    from (
+        select * from sentinel.samples where mac_id = '${id}' and demand_timestamp > UNIX_TIMESTAMP (DATE('${ts1}')) AND demand_timestamp <= UNIX_TIMESTAMP (TIMESTAMP('${ts2} 23:59:59') )
+    ) t2
+    group by date`;
+
+    global.rainforest.getData(q)
+        .then( (data) => {
+            res.json( { data: data, result : 'ok'  } );
         })
         .catch( (err) => {
             res.status(500).json( { code: err.code || 0, message: err.message } );
@@ -120,8 +116,8 @@ getUsageBy['month'] = (id, end, res) => {
 
 getUsageBy['year'] = (id, start, res) => {
 
-    let ts1 = moment(end).subtract(1, 'y').format('YYYY-MM-DD');
-    let ts2 = moment(end).format('YYYY-MM-DD');
+    let ts1 = moment(start).format('YYYY-MM-DD');
+    let ts2 = moment(start).subtract(1, 'y').format('YYYY-MM-DD');
 
     let q = `
     select
@@ -134,8 +130,7 @@ getUsageBy['year'] = (id, start, res) => {
 
     global.rainforest.getData(q)
         .then( (data) => {
-            let r = { start : ts1, end : ts2, samples : data };
-            res.json( { data: r, result : 'ok'  } );
+            res.json( { data: data, result : 'ok'  } );
         })
         .catch( (err) => {
             res.status(500).json( { code: err.code || 0, message: err.message } );
